--- a/src/docs/asciidoc/slides/shiny.adoc
+++ b/src/docs/asciidoc/slides/shiny.adoc
@@ -22,4 +22,5 @@ include::features/iterators.adoc[]
 include::features/destructure.adoc[]
 include::features/parameters.adoc[]
 include::features/arrow-functions.adoc[]
+include::features/promises.adoc[]
 include::features/other-things.adoc[]
