--- a/src/docs/asciidoc/slides/features/destructure.adoc
+++ b/src/docs/asciidoc/slides/features/destructure.adoc
@@ -1,3 +1,4 @@
+[data-transition="None"]
 == Destructuring
 
 ----
@@ -14,6 +15,7 @@ I showed a little example of destructuring a little earlier, where we were loopi
 
 --
 
+[data-transition="None"]
 === Destructuring
 
 ----
@@ -161,6 +163,7 @@ Object destructuring can fetch any propery, including built-in ones.
 
 Array destructuring, well, it's not just for arrays.
 --
+
 [data-transition="None"]
 === Destructuring
 
@@ -208,6 +211,7 @@ const [head, ...tail] = "abcdef";
 This notation here, with the three dots, is called the rest operator.  It gathers up all the remaining elements of the array, the iterable, into an array.
 --
 
+[data-transition="None"]
 === Destructuring
 
 ----
